vlib/v/checker/tests/option_map_or_unwrap_mut_source_err.out
vlib/v/checker/tests/option_map_or_unwrap_mut_source_err.vv:18:7: error: cannot copy map: call `move` or `clone` method (or use a reference)
   16 |         'x': 1
   17 |     })
   18 |     a := opt or { panic('missing') }
      |          ~~~
   19 | 
   20 |     mut c := Category{
vlib/v/checker/tests/option_map_or_unwrap_mut_source_err.vv:25:9: error: cannot copy map: call `move` or `clone` method (or use a reference)
   23 |         }
   24 |     }
   25 |     b := c.translations or { panic('missing') }
      |            ~~~~~~~~~~~~
   26 | 
   27 |     inner := {
vlib/v/checker/tests/option_map_or_unwrap_mut_source_err.vv:33:14: error: cannot copy map: call `move` or `clone` method (or use a reference)
   31 |         'a': ?map[string]int(inner)
   32 |     }
   33 |     d := m['a'] or { panic('missing') }
      |                 ~~~~~~~~~~~~~~~~~~~~~~~
   34 | 
   35 |     println(a)
